# Hyper-Extract

./: .env.example  .gitignore  README.md  README_ZH.md  README_old.md  docs_hooks.py  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  integration.yml  lint.yml  publish.yml  test.yml
docs/: BUILDING.md  index.md
docs/api/: auto_list.md  auto_set.md  base.md  index.md  list.md  model.md  set.md  unit.md
docs/en/: index.md
docs/en/cli/: cli.md  config.md  configuration.md  index.md  workflow.md
docs/en/concepts/: architecture.md  auto-types.md  autotypes.md  index.md  methods.md  templates-format.md  templates.md
docs/en/getting-started/: cli-quickstart.md  configuration.md  index.md  installation.md  python-quickstart.md  quickstart.md
docs/en/guides/: cli.md  index.md  python-api.md
docs/en/python/: config.md  core-concepts.md  index.md  python-api.md  quickstart.md
docs/en/reference/: cli-reference.md  index.md  template-gallery.md
docs/en/resources/: contributing.md  faq.md  index.md  troubleshooting.md
docs/en/templates/: browse.md  finance.md  how-to-choose.md  index.md  industry.md  legal.md  medicine.md  tcm.md
docs/en/tutorials/: index.md
docs/stylesheets/: extra.css
docs/user-guide/: getting-started.md  knowledge-patterns.md
docs/zh/: index.md
examples/: README.md  README_ZH.md  atom_demo.py  auto_graph_demo.py  auto_graph_game_demo.py  auto_hypergraph_demo.py  auto_list_demo.py  auto_list_operations_demo.py  auto_model_demo.py  auto_set_demo.py  auto_spatial_graph_demo.py  auto_spatio_temporal_graph_demo.py  auto_temporal_graph_demo.py  cog_rag_demo.py  config_template_demo.py  generic_knowledge_demo.py  hyper_rag_demo.py  hypergraph_rag_demo.py  itext2kg_demo.py  itext2kg_star_demo.py  kg_gen_demo.py  knowledge_vector_search_demo.py  life_event_timeline_demo.py  light_rag_demo.py  list_knowledge_demo.py  list_knowledge_multi_chunk_demo.py  list_operations_demo.py  method_atom_demo.py  method_cog_rag_demo.py  method_graph_rag_demo.py  method_hyper_rag_demo.py  method_hypergraph_rag_demo.py  set_knowledge_demo.py  template_agriculture_demo.py  template_api_demo.py  template_biology_demo.py  template_demo.py  template_finance_demo.py  template_food_demo.py  template_general_demo.py  (+9 more)
examples/en/: tesla.md  tesla_question.md
examples/inputs/: mmorpg_guild_drama.md  sci_fi_story.md
examples/methods/: atom_demo.py  cog_rag_demo.py  graph_rag_demo.py  hyper_rag_demo.py  hypergraph_rag_demo.py  itext2kg_demo.py  itext2kg_star_demo.py  kg_gen_demo.py  light_rag_demo.py
examples/templates/: README.md  legal_template.py  list_templates.py  medicine_template.py  run_template.py  templates_mapping.yaml
examples/types/: graph_demo.py  hypergraph_demo.py  list_demo.py  model_demo.py  set_demo.py  spatial_graph_demo.py  spatio_temporal_graph_demo.py  temporal_graph_demo.py
examples/zh/: sushi.md  sushi_question.md
hyperextract/: __init__.py  config.py
hyperextract-skills/: README.md  README_ZH.md  SKILL.md
hyperextract-skills/brainstorm/: SKILL.md
hyperextract-skills/graph-designer/: SKILL.md  examples.md  reference-relation.md
hyperextract-skills/multilingual/: SKILL.md
hyperextract-skills/record-designer/: SKILL.md  examples.md  reference-field.md
hyperextract-skills/template-optimizer/: SKILL.md
hyperextract-skills/yaml-validator/: SKILL.md  patterns-errors.md  rules-identifiers.md  rules-syntax.md
hyperextract/cli/: README.md  README_ZH.md  __init__.py  __main__.py  cli.py  config.py  templates.py  utils.py
hyperextract/core/: __init__.py  base.py  list.py  model.py  set.py
hyperextract/graphs/: __init__.py  atom.py  base.py  itext2kg.py  itext2kg_star.py  kg_gen.py  spatial_graph.py  spatio_temporal_graph.py  temporal_graph.py
hyperextract/hypergraphs/: __init__.py  base.py  cog_rag.py  hyper_rag.py  hypergraph_rag.py
hyperextract/knowledge/: __init__.py  base.py
hyperextract/methods/: __init__.py  registry.py
hyperextract/templates/: DESIGN_GUIDE.md  DESIGN_GUIDE_zh.md  INSTRUCTION.md  INSTRUCTION_ZH.md  PLANNING_TEMPLATES_REDESIGN.md  PYTHON转YAML配置指南.md  README.md  README_ZH.md  __init__.py  知识模板设计指南.md
hyperextract/trees/: __init__.py
hyperextract/types/: __init__.py  base.py  graph.py  hypergraph.py  list.py  model.py  set.py  spatial_graph.py  spatio_temporal_graph.py  temporal_graph.py
hyperextract/utils/: __init__.py  client.py  logging.py
scripts/: migrate_yaml_configs.py
src/: config.py
src/knowledge/: base.py  entity.py  generic.py
tests/: conftest.py  kg.md  mocks.py  test_knowledge.py
tests/cli/: test_verbose.py
tests/fixtures/: __init__.py  data.py  schemas.py
tests/integration/: __init__.py  test_real_extraction.py
tests/template_engine/: __init__.py  test_factory.py  test_gallery.py  test_parser_loader.py  test_parser_output.py
tests/types/: __init__.py  test_extraction_logging.py  test_graph.py  test_graph_dangling.py  test_graph_extraction.py  test_graph_search.py  test_hypergraph.py  test_list.py  test_list_iteration.py  test_list_operations.py  test_list_slicing.py  test_model.py  test_model_basic.py  test_model_merge.py  test_model_serialization.py  test_set.py  test_set_dedup.py  test_set_operations.py  test_set_operators.py  test_spatial_graph.py  test_spatio_temporal_graph.py  test_temporal_graph.py
(+1119 files in other folders)
